# FutureDiary

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/: ipfs.py  log.py  main.py
backend/src/agents/: story.py
backend/src/llm/: openai.py  sd.py
contacts/: Move.toml
contacts/sources/: future_diary.move
contacts/tests/: future_diary_tests.move
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  config.ts
frontend/src/pages/: LandingPage.tsx  MyDiary.tsx  NewDiary.tsx
